continuing style conversion to tailwind

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -554,34 +554,140 @@ video {
     max-width: 1536px;
   }
 }
+.absolute{
+  position: absolute;
+}
+.relative{
+  position: relative;
+}
+.top-1\.5{
+  top: 0.375rem;
+}
+.-right-6{
+  right: -1.5rem;
+}
+.top-1{
+  top: 0.25rem;
+}
 .mt-24{
   margin-top: 6rem;
-}
-.-mt-16{
-  margin-top: -4rem;
 }
 .-mt-8{
   margin-top: -2rem;
 }
+.mb-4{
+  margin-bottom: 1rem;
+}
+.mr-1{
+  margin-right: 0.25rem;
+}
 .block{
   display: block;
 }
+.inline{
+  display: inline;
+}
+.flex{
+  display: flex;
+}
+.hidden{
+  display: none;
+}
+.h-72{
+  height: 18rem;
+}
+.w-1\/6{
+  width: 16.666667%;
+}
+.w-full{
+  width: 100%;
+}
+.w-3{
+  width: 0.75rem;
+}
+.w-3\.5{
+  width: 0.875rem;
+}
+.flex-shrink-0{
+  flex-shrink: 0;
+}
+.rotate-45{
+  --tw-rotate: 45deg;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+.cursor-pointer{
+  cursor: pointer;
+}
+.flex-wrap{
+  flex-wrap: wrap;
+}
+.items-center{
+  align-items: center;
+}
+.justify-center{
+  justify-content: center;
+}
+.overflow-hidden{
+  overflow: hidden;
+}
 .border-2{
   border-width: 2px;
+}
+.bg-white{
+  --tw-bg-opacity: 1;
+  background-color: rgb(255 255 255 / var(--tw-bg-opacity));
+}
+.bg-pink{
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 168 178 / var(--tw-bg-opacity));
+}
+.bg-orange{
+  --tw-bg-opacity: 1;
+  background-color: rgb(232 103 69 / var(--tw-bg-opacity));
+}
+.bg-black{
+  --tw-bg-opacity: 1;
+  background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
 .bg-tan{
   --tw-bg-opacity: 1;
   background-color: rgb(242 232 230 / var(--tw-bg-opacity));
 }
+.bg-opacity-60{
+  --tw-bg-opacity: 0.6;
+}
+.bg-opacity-40{
+  --tw-bg-opacity: 0.4;
+}
+.p-1{
+  padding: 0.25rem;
+}
+.p-4{
+  padding: 1rem;
+}
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
 }
+.py-2{
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
+}
+.pt-2{
+  padding-top: 0.5rem;
+}
 .text-center{
   text-align: center;
 }
+.align-baseline{
+  vertical-align: baseline;
+}
 .font-serif{
   font-family: Cormorant Garamond, serif;
+}
+.text-xs{
+  font-size: 0.75rem;
+  line-height: 1rem;
 }
 .text-6xl{
   font-size: 3.75rem;
@@ -591,15 +697,74 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
+.font-medium{
+  font-weight: 500;
+}
+.font-light{
+  font-weight: 300;
+}
+.uppercase{
+  text-transform: uppercase;
 }
 .lowercase{
   text-transform: lowercase;
 }
+.leading-6{
+  line-height: 1.5rem;
+}
+.text-white{
+  --tw-text-opacity: 1;
+  color: rgb(255 255 255 / var(--tw-text-opacity));
+}
 .text-green{
   --tw-text-opacity: 1;
   color: rgb(103 167 119 / var(--tw-text-opacity));
+}
+.text-yellow{
+  --tw-text-opacity: 1;
+  color: rgb(244 222 125 / var(--tw-text-opacity));
+}
+.text-grey{
+  --tw-text-opacity: 1;
+  color: rgb(11 9 38 / var(--tw-text-opacity));
+}
+.underline{
+  -webkit-text-decoration-line: underline;
+          text-decoration-line: underline;
+}
+.opacity-80{
+  opacity: 0.8;
+}
+
+img{
+  width: 100%;
+}
+
+.book .img {
+        width: calc(100% + 8px);
+        margin: -4px -4px .75rem;
+    }
+
+.book .read {
+        box-shadow: -1px 1px 3px rgb(0 0 0 / 30%);
+    }
+
+.book .rating {
+        bottom: 4px;
+        left: 4px;
+        width: calc(100% - 8px);
+        padding: 2px 0;
+    }
+
+.book .rating svg {
+            margin-right: 2px;
+        }
+
+.group:hover .group-hover\:block{
+  display: block;
 }
 
