--- a/public/css/app.css
+++ b/public/css/app.css
@@ -554,6 +554,9 @@ video {
     max-width: 1536px;
   }
 }
+.fixed{
+  position: fixed;
+}
 .absolute{
   position: absolute;
 }
@@ -568,6 +571,18 @@ video {
 }
 .top-1{
   top: 0.25rem;
+}
+.top-3{
+  top: 0.75rem;
+}
+.left-3{
+  left: 0.75rem;
+}
+.z-10{
+  z-index: 10;
+}
+.mt-6{
+  margin-top: 1.5rem;
 }
 .mt-24{
   margin-top: 6rem;
@@ -602,11 +617,14 @@ video {
 .w-full{
   width: 100%;
 }
-.w-3{
-  width: 0.75rem;
+.w-5{
+  width: 1.25rem;
 }
 .w-3\.5{
   width: 0.875rem;
+}
+.w-3{
+  width: 0.75rem;
 }
 .flex-shrink-0{
   flex-shrink: 0;
@@ -630,8 +648,18 @@ video {
 .overflow-hidden{
   overflow: hidden;
 }
+.rounded-3xl{
+  border-radius: 1.5rem;
+}
 .border-2{
   border-width: 2px;
+}
+.border-l-2{
+  border-left-width: 2px;
+}
+.border-grey{
+  --tw-border-opacity: 1;
+  border-color: rgb(11 9 38 / var(--tw-border-opacity));
 }
 .bg-white{
   --tw-bg-opacity: 1;
@@ -649,6 +677,14 @@ video {
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
 }
+.bg-purple{
+  --tw-bg-opacity: 1;
+  background-color: rgb(182 186 205 / var(--tw-bg-opacity));
+}
+.bg-yellow{
+  --tw-bg-opacity: 1;
+  background-color: rgb(244 222 125 / var(--tw-bg-opacity));
+}
 .bg-tan{
   --tw-bg-opacity: 1;
   background-color: rgb(242 232 230 / var(--tw-bg-opacity));
@@ -665,6 +701,9 @@ video {
 .p-4{
   padding: 1rem;
 }
+.p-6{
+  padding: 1.5rem;
+}
 .px-8{
   padding-left: 2rem;
   padding-right: 2rem;
@@ -672,6 +711,18 @@ video {
 .py-2{
   padding-top: 0.5rem;
   padding-bottom: 0.5rem;
+}
+.py-1\.5{
+  padding-top: 0.375rem;
+  padding-bottom: 0.375rem;
+}
+.px-3{
+  padding-left: 0.75rem;
+  padding-right: 0.75rem;
+}
+.py-1{
+  padding-top: 0.25rem;
+  padding-bottom: 0.25rem;
 }
 .pt-2{
   padding-top: 0.5rem;
@@ -689,6 +740,10 @@ video {
   font-size: 0.75rem;
   line-height: 1rem;
 }
+.text-sm{
+  font-size: 0.875rem;
+  line-height: 1.25rem;
+}
 .text-6xl{
   font-size: 3.75rem;
   line-height: 1;
@@ -697,12 +752,11 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
-.text-sm{
-  font-size: 0.875rem;
-  line-height: 1.25rem;
-}
 .font-medium{
   font-weight: 500;
+}
+.font-normal{
+  font-weight: 400;
 }
 .font-light{
   font-weight: 300;
@@ -739,7 +793,16 @@ video {
 .opacity-80{
   opacity: 0.8;
 }
+.outline-0{
+  outline-width: 0px;
+}
+.filter{
+  filter: var(--tw-blur) var(--tw-brightness) var(--tw-contrast) var(--tw-grayscale) var(--tw-hue-rotate) var(--tw-invert) var(--tw-saturate) var(--tw-sepia) var(--tw-drop-shadow);
+}
 
+a {
+    transition: all 150ms linear;
+}
 img{
   width: 100%;
 }
@@ -763,7 +826,21 @@ img{
 .book .rating svg {
             margin-right: 2px;
         }
-
+.btn-group {
+    padding: 2px;
+}
+.btn-group .btn:first-child{
+  border-top-left-radius: 1.5rem;
+  border-bottom-left-radius: 1.5rem;
+}
+.btn-group .btn:last-child{
+  border-top-right-radius: 1.5rem;
+  border-bottom-right-radius: 1.5rem;
+}
+.hover\:text-green:hover{
+  --tw-text-opacity: 1;
+  color: rgb(103 167 119 / var(--tw-text-opacity));
+}
 .group:hover .group-hover\:block{
   display: block;
 }
