--- a/public/css/app.css
+++ b/public/css/app.css
@@ -596,6 +596,9 @@ video {
 .mr-1{
   margin-right: 0.25rem;
 }
+.mt-3{
+  margin-top: 0.75rem;
+}
 .block{
   display: block;
 }
@@ -626,6 +629,12 @@ video {
 .w-3{
   width: 0.75rem;
 }
+.w-9\/12{
+  width: 75%;
+}
+.w-2\/12{
+  width: 16.666667%;
+}
 .flex-shrink-0{
   flex-shrink: 0;
 }
@@ -653,6 +662,9 @@ video {
 }
 .border-2{
   border-width: 2px;
+}
+.border-0{
+  border-width: 0px;
 }
 .border-l-2{
   border-left-width: 2px;
@@ -726,6 +738,9 @@ video {
 }
 .pt-2{
   padding-top: 0.5rem;
+}
+.pl-2{
+  padding-left: 0.5rem;
 }
 .text-center{
   text-align: center;
@@ -840,6 +855,20 @@ img{
 .hover\:text-green:hover{
   --tw-text-opacity: 1;
   color: rgb(103 167 119 / var(--tw-text-opacity));
+}
+.focus\:shadow-none:focus{
+  --tw-shadow: 0 0 #0000;
+  --tw-shadow-colored: 0 0 #0000;
+  box-shadow: var(--tw-ring-offset-shadow, 0 0 #0000), var(--tw-ring-shadow, 0 0 #0000), var(--tw-shadow);
+}
+.focus\:outline-none:focus{
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+}
+.focus\:ring-0:focus{
+  --tw-ring-offset-shadow: var(--tw-ring-inset) 0 0 0 var(--tw-ring-offset-width) var(--tw-ring-offset-color);
+  --tw-ring-shadow: var(--tw-ring-inset) 0 0 0 calc(0px + var(--tw-ring-offset-width)) var(--tw-ring-color);
+  box-shadow: var(--tw-ring-offset-shadow), var(--tw-ring-shadow), var(--tw-shadow, 0 0 #0000);
 }
 .group:hover .group-hover\:block{
   display: block;
