--- a/resources/sass/_variables.scss
+++ b/resources/sass/_variables.scss
@@ -1,15 +1,15 @@
 // Body
 $body-bg: #f2e8e6;
-$grey:  #0B0926;
+$grey: #0b0926;
 $text: $grey;
 $white: #fff;
 
 // Color Scheme
-$pink: #F4A8B2;
-$green: #67A777;
+$pink: #f4a8b2;
+$green: #67a777;
 $blue: #647ddd;
-$yellow: #f4DE7D;
-$orange: #E86745;
+$yellow: #f4de7d;
+$orange: #e86745;
 
 // Typography
 $font-family-sans-serif: 'Lato', sans-serif;
