--- a/resources/tailwind/app.css
+++ b/resources/tailwind/app.css
@@ -4,8 +4,21 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+:root {
+    --pink: #f4a8b2;
+    --green: #67a777;
+    --blue: #647ddd;
+    --yellow: #f4de7d;
+    --orange: #e86745;
+    --purple: #b6bacd;
+    --tan: #f2e8e6;
+    --grey: #0b0926;
+    --white: #ffffff;
+    --black: #000000;
+}
 
-a {
+a,
+button {
     transition: all 150ms linear;
 }
 img {
@@ -15,7 +28,7 @@ img {
 .book {
     .img {
         width: calc(100% + 8px);
-        margin: -4px -4px .75rem;
+        margin: -4px -4px 0.75rem;
     }
     .read {
         box-shadow: -1px 1px 3px rgb(0 0 0 / 30%);
@@ -40,13 +53,68 @@ img {
     }
 }
 .form-range {
-    -webkit-appearance: none;
     background: transparent;
     &::-moz-focus-outer {
         border: 0;
     }
     &::-webkit-slider-thumb {
-         height:50px;
-         width: 50px;
-     }
+        width: 1rem;
+        height: 1rem;
+        margin-top: -0.25rem;
+        background-color: var(--pink);
+        border: 0;
+        border-radius: 1rem;
+        -webkit-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+            box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        -webkit-appearance: none;
+        appearance: none;
+        box-shadow: 0 0 0 0.05rem rgba(11, 9, 38, 0.25);
+        &:active {
+            background: var(--pink);
+        }
+    }
+    &:focus {
+        outline: 0;
+        &::-webkit-slider-thumb {
+            box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(11, 9, 38, 0.25);
+        }
+        &::-moz-range-thumb {
+            box-shadow: 0 0 0 1px #fff, 0 0 0 0.25rem rgba(11, 9, 38, 0.25);
+        }
+    }
+    &::-webkit-slider-runnable-track {
+        width: 100%;
+        height: 0.5rem;
+        color: transparent;
+        cursor: pointer;
+        background-color: #d7dbdf;
+        border-color: transparent;
+        border-radius: 1rem;
+    }
+    &::-moz-range-thumb {
+        width: 1rem;
+        height: 1rem;
+        background-color: var(--pink);
+        border: 0;
+        border-radius: 1rem;
+        -moz-transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out,
+            box-shadow 0.15s ease-in-out;
+        transition: background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+        -moz-appearance: none;
+        appearance: none;
+        box-shadow: 0 0 0 0.05rem rgba(11, 9, 38, 0.05);
+        &:active {
+            background-color: var(--pink);
+        }
+    }
+    &::-moz-range-track {
+        width: 100%;
+        height: 0.5rem;
+        color: transparent;
+        cursor: pointer;
+        background-color: #d7dbdf;
+        border-color: transparent;
+        border-radius: 1rem;
+    }
 }
