--- a/public/css/app.css
+++ b/public/css/app.css
@@ -554,6 +554,17 @@ video {
     max-width: 1536px;
   }
 }
+.sr-only{
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  padding: 0;
+  margin: -1px;
+  overflow: hidden;
+  clip: rect(0, 0, 0, 0);
+  white-space: nowrap;
+  border-width: 0;
+}
 .fixed{
   position: fixed;
 }
@@ -599,6 +610,15 @@ video {
 .mr-1{
   margin-right: 0.25rem;
 }
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+.-ml-2{
+  margin-left: -0.5rem;
+}
+.-ml-1{
+  margin-left: -0.25rem;
+}
 .block{
   display: block;
 }
@@ -613,6 +633,9 @@ video {
 }
 .inline-flex{
   display: inline-flex;
+}
+.grid{
+  display: grid;
 }
 .hidden{
   display: none;
@@ -671,8 +694,31 @@ video {
 .justify-center{
   justify-content: center;
 }
+.gap-3{
+  gap: 0.75rem;
+}
+.gap-1{
+  gap: 0.25rem;
+}
+.gap-x-1{
+  -moz-column-gap: 0.25rem;
+       column-gap: 0.25rem;
+}
+.space-x-12 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(3rem * var(--tw-space-x-reverse));
+  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
+}
+.space-x-4 > :not([hidden]) ~ :not([hidden]){
+  --tw-space-x-reverse: 0;
+  margin-right: calc(1rem * var(--tw-space-x-reverse));
+  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
+}
 .overflow-hidden{
   overflow: hidden;
+}
+.whitespace-nowrap{
+  white-space: nowrap;
 }
 .rounded-3xl{
   border-radius: 1.5rem;
@@ -724,6 +770,9 @@ video {
 }
 .p-6{
   padding: 1.5rem;
+}
+.p-5{
+  padding: 1.25rem;
 }
 .px-8{
   padding-left: 2rem;
@@ -780,6 +829,18 @@ video {
   font-size: 1.25rem;
   line-height: 1.75rem;
 }
+.text-2xl{
+  font-size: 1.5rem;
+  line-height: 2rem;
+}
+.text-4xl{
+  font-size: 2.25rem;
+  line-height: 2.5rem;
+}
+.text-lg{
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
 .font-medium{
   font-weight: 500;
 }
@@ -795,20 +856,23 @@ video {
 .lowercase{
   text-transform: lowercase;
 }
+.italic{
+  font-style: italic;
+}
 .leading-6{
   line-height: 1.5rem;
 }
 .text-white{
   color: var(--white);
 }
+.text-grey{
+  color: var(--grey);
+}
 .text-green{
   color: var(--green);
 }
 .text-yellow{
   color: var(--yellow);
-}
-.text-grey{
-  color: var(--grey);
 }
 .underline{
   -webkit-text-decoration-line: underline;
@@ -863,13 +927,16 @@ img{
 .book .rating svg {
             margin-right: 2px;
         }
+
 .btn-group {
     padding: 2px;
 }
+
 .btn-group .btn:first-child{
   border-top-left-radius: 1.5rem;
   border-bottom-left-radius: 1.5rem;
 }
+
 .btn-group .btn:last-child{
   border-top-right-radius: 1.5rem;
   border-bottom-right-radius: 1.5rem;
@@ -938,6 +1005,9 @@ img{
         border-color: transparent;
         border-radius: 1rem;
     }
+.first\:-ml-2:first-child{
+  margin-left: -0.5rem;
+}
 .hover\:bg-yellow:hover{
   background-color: var(--yellow);
 }
