--- a/public/css/app.css
+++ b/public/css/app.css
@@ -601,6 +601,12 @@ video {
 .mt-24{
   margin-top: 6rem;
 }
+.mb-3{
+  margin-bottom: 0.75rem;
+}
+.-ml-2{
+  margin-left: -0.5rem;
+}
 .-mt-8{
   margin-top: -2rem;
 }
@@ -610,14 +616,8 @@ video {
 .mr-1{
   margin-right: 0.25rem;
 }
-.mb-3{
-  margin-bottom: 0.75rem;
-}
-.-ml-2{
-  margin-left: -0.5rem;
-}
-.-ml-1{
-  margin-left: -0.25rem;
+.mb-8{
+  margin-bottom: 2rem;
 }
 .block{
   display: block;
@@ -633,9 +633,6 @@ video {
 }
 .inline-flex{
   display: inline-flex;
-}
-.grid{
-  display: grid;
 }
 .hidden{
   display: none;
@@ -660,6 +657,12 @@ video {
 }
 .w-2\/12{
   width: 16.666667%;
+}
+.w-3\/5{
+  width: 60%;
+}
+.w-2\/5{
+  width: 40%;
 }
 .w-3\.5{
   width: 0.875rem;
@@ -694,31 +697,12 @@ video {
 .justify-center{
   justify-content: center;
 }
-.gap-3{
-  gap: 0.75rem;
-}
-.gap-1{
-  gap: 0.25rem;
-}
 .gap-x-1{
   -moz-column-gap: 0.25rem;
        column-gap: 0.25rem;
 }
-.space-x-12 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(3rem * var(--tw-space-x-reverse));
-  margin-left: calc(3rem * calc(1 - var(--tw-space-x-reverse)));
-}
-.space-x-4 > :not([hidden]) ~ :not([hidden]){
-  --tw-space-x-reverse: 0;
-  margin-right: calc(1rem * var(--tw-space-x-reverse));
-  margin-left: calc(1rem * calc(1 - var(--tw-space-x-reverse)));
-}
 .overflow-hidden{
   overflow: hidden;
-}
-.whitespace-nowrap{
-  white-space: nowrap;
 }
 .rounded-3xl{
   border-radius: 1.5rem;
@@ -756,6 +740,9 @@ video {
 .bg-tan{
   background-color: var(--tan);
 }
+.bg-green{
+  background-color: var(--green);
+}
 .bg-opacity-60{
   --tw-bg-opacity: 0.6;
 }
@@ -770,9 +757,6 @@ video {
 }
 .p-6{
   padding: 1.5rem;
-}
-.p-5{
-  padding: 1.25rem;
 }
 .px-8{
   padding-left: 2rem;
@@ -798,6 +782,10 @@ video {
   padding-left: 0.5rem;
   padding-right: 0.5rem;
 }
+.py-4{
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+}
 .pt-2{
   padding-top: 0.5rem;
 }
@@ -821,24 +809,20 @@ video {
   font-size: 0.875rem;
   line-height: 1.25rem;
 }
-.text-6xl{
-  font-size: 3.75rem;
-  line-height: 1;
-}
-.text-xl{
-  font-size: 1.25rem;
-  line-height: 1.75rem;
-}
-.text-2xl{
-  font-size: 1.5rem;
-  line-height: 2rem;
-}
 .text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
 }
 .text-lg{
   font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+.text-6xl{
+  font-size: 3.75rem;
+  line-height: 1;
+}
+.text-xl{
+  font-size: 1.25rem;
   line-height: 1.75rem;
 }
 .font-medium{
@@ -861,6 +845,15 @@ video {
 }
 .leading-6{
   line-height: 1.5rem;
+}
+.leading-3{
+  line-height: .75rem;
+}
+.leading-4{
+  line-height: 1rem;
+}
+.leading-5{
+  line-height: 1.25rem;
 }
 .text-white{
   color: var(--white);
@@ -901,7 +894,8 @@ video {
 }
 
 a,
-button {
+button,
+label {
     transition: all 150ms linear;
 }
 img{
@@ -1005,9 +999,6 @@ img{
         border-color: transparent;
         border-radius: 1rem;
     }
-.first\:-ml-2:first-child{
-  margin-left: -0.5rem;
-}
 .hover\:bg-yellow:hover{
   background-color: var(--yellow);
 }
@@ -1019,6 +1010,9 @@ img{
 }
 .hover\:text-grey:hover{
   color: var(--grey);
+}
+.hover\:opacity-80:hover{
+  opacity: 0.8;
 }
 .group:hover .group-hover\:block{
   display: block;
